2022-05-04  Jay Berkenbilt  <ejb@ql.org>

        * Enhance JSON by adding a write method that takes a Pipeline* and
        depth, and add several helper methods to make it easier to write
        large amounts of JSON incrementally without having to have the
        whole thing in memory.

        * json v1 output: make "pages" and "objects" consistent.
        Previously, "objects" always reflected the objects exactly as they
        appeared in the original file, while "pages" reflected objects
        after repair of the pages tree. This could be misleading. Now, if
        "pages" is specified, "objects" shows the effects of repairing the
        page tree, and if not, it doesn't. This makes no difference for
        correct PDF files that don't have problems in the pages tree. JSON
        v2 will behave in a similar way.

2022-05-03  Jay Berkenbilt  <ejb@ql.org>

        * Add new Pipeline class Pl_String which appends to a std::string&
        passed to it at construction.

        * Add new Pipeline class Pl_OStream, similar to Pl_StdioFile but
        takes a std::ostream instead of a FILE*.

        * Add new convenience methods to Pipeline: writeCStr and
        writeString. Also add a limit << operator that takes C strings and
        std::strings. Also add an overloaded version of write that takes
        "char const*".

        * API change: Pipeline::write now takes "unsigned char const *"
        instead of "unsigned char*". Callers shouldn't have to change
        anything, though can stop using writable strings or
        QUtil::unsigned_char_pointer. If you have implemented your own
        pipelines, you should change your write method to take a const
        pointer.

2022-05-01  Jay Berkenbilt  <ejb@ql.org>

        * JSON: add reactors to the JSON parser, making it possible to
        react to JSON parsing events as they occur and to block the
        results from being stored. This makes it possible to incrementally