@@ -1,5 +1,8 @@
 2022-05-04  Jay Berkenbilt  <ejb@ql.org>
 
+        * FileInputSource has new constructors that eliminate the need to
+        call setFilename or setFile in most cases.
+
         * Enhance JSON by adding a write method that takes a Pipeline* and
         depth, and add several helper methods to make it easier to write
         large amounts of JSON incrementally without having to have the
